mongosts.yaml
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: mongo
# spec:
#   selector:
#     matchLabels:
#       app: mongo
#   serviceName: "mongo"
#   replicas: 3
#   template:
#     metadata:
#       labels:
#         app: mongo
#     spec:
#       containers:
#         - name: mongo
#           image: mongo:4.4.6
#           imagePullPolicy: IfNotPresent
#           startupProbe:
#             exec:
#               command:
#                 - mongo
#                 - --eval
#                 - "db.adminCommand('ping')"
#             initialDelaySeconds: 1
#             periodSeconds: 10
#             timeoutSeconds: 5
#             successThreshold: 1
#             failureThreshold: 2
#           livenessProbe:
#             exec:
#               command:
#                 - mongo
#                 - --eval
#                 - "db.adminCommand('ping')"
#             initialDelaySeconds: 1
#             periodSeconds: 10
#             timeoutSeconds: 5
#             successThreshold: 1
#             failureThreshold: 2
#           readinessProbe:
#             exec:
#               command:
#                 - mongo
#                 - --eval
#                 - "db.adminCommand('ping')"
#             initialDelaySeconds: 1
#             periodSeconds: 10
#             timeoutSeconds: 5
#             successThreshold: 1
#             failureThreshold: 2
#           env:
#             - name: ME_CONFIG_MONGODB_ENABLE_ADMIN
#               value: "true"
#             - name: MONGO_INITDB_ROOT_USERNAME
#               valueFrom:
#                 secretKeyRef:
#                   name: mongo-secret
#                   key: MONGO_USERNAME
#             - name: MONGO_INITDB_ROOT_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: mongo-secret
#                   key: MONGO_PASSWORD 
#           command:
#             - mongod
#             - "--bind_ip_all"
#             - --config=/etc/mongo/mongodb.conf
#           volumeMounts:
#             - name: mongo-volume
#               mountPath: /data/db
#             - name: mongo-config
#               mountPath: /etc/mongo
#       volumes:
#         - name: mongo-config
#           configMap:
#             name: mongo-config
#             items:
#               - key: mongodb.conf
#                 path: mongodb.conf
#   volumeClaimTemplates:
#     - metadata:
#         name: mongo-volume
#       spec:
#         accessModes: ["ReadWriteOnce"]
#         storageClassName: local-path
#         resources:
#           requests:
#             storage: 1Gi


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  replicas: 3
  template:
    metadata:
      labels:
        app: mongo
        selector: mongo
    spec:
      volumes:
        - name: mongo-config
          configMap:
            name: mongo-config
            items:
              - key: mongodb.conf
                path: mongodb.conf
      containers:
      - name: mongo
        image: mongo:4.4.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: pvc
          mountPath: /data/db
        - name: mongo-config
          mountPath: /etc/mongo  
        command:
        
            # - /bin/bash
            # - -c
            # - mv /usr/bin/numactl /usr/bin/numactl1 && source docker-entrypoint.sh mongod
            - mongod
            - "--bind_ip_all"
            - --config=/etc/mongo/mongodb.conf   
                
  volumeClaimTemplates:
  - metadata:
      name: pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
