jobapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jobapi
  template:
    metadata:
      labels:
        app: jobapi
    spec:
      containers:
      - name: jobapi
        image: jobapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jobapi
spec:
  type: ClusterIP
  selector:
    app: jobapi
  ports:
  - port: 3000
    targetPort: 3000
