service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplemicroservice
spec:
  selector:
    app: simplemicroservice
  ports:
  - port: 3000
    targetPort: 3000
