ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: simplemicroservice
            port:
              number: 3000
      - path: /jobs
        pathType: Prefix
        backend:
          service:
            name: jobapi
            port:
              number: 3000
